# pyperfdump

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  meson.build  meson.options
.github/workflows/: README.md  test.yml
cmake/: FindPAPI.cmake
include/: papi_utils.h  papi_utils.h.in  pyperfdump.h  pyperfdump.h.in
spack/: README.md  env.yaml
spack/repo/: repo.yaml
src/: CMakeLists.txt  dump_functions.cpp  dump_functions.cpp.in  papi_utils.cpp  perf_dump.cpp  perf_dump.cpp.in
test/: build.sh  demo.py  env.sh  test.py  test.sh
